added color pallette

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-#logo{
+
+
+:root{
+ primary-color: #10330B;
+ secondary-color: #023E46;
+ tertiary-color: #1C676A;
+ orange-1: #A54610;
+ orange-2: #FEAA47;
+
+}#logo{
     
 }
