--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
 
 
 :root{
- primary-color: #10330B;
- secondary-color: #023E46;
- tertiary-color: #1C676A;
- orange-1: #A54610;
- orange-2: #FEAA47;
+ --primary-color: #10330B;
+ --secondary-color: #023E46;
+ --tertiary-color: #1C676A;
+ --orange-1: #A54610;
+ --orange-2: #FEAA47;
 
 }#logo{
     
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/**Contact Us Form Styling **/
+
+.contact-us-form{
+    width: 600px;
+    background-color: var(--secondary-color);
 }
