--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
 .content-main{
     max-width: 900px;
     margin-right: 2rem;
+    color: var(--tertiary-color)
 }
 .content-aside{
     background-color: var(--hover);
@@ -123,6 +124,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    color: #fff;
 }
 
 .aside-li-item{
@@ -130,7 +132,20 @@ body {
     margin-bottom: 1rem;
 }
 
-
+.card-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+}
 footer{
     background-color: var(--secondary-color);
     display: flex;
