--- a/style.css
+++ b/style.css
@@ -137,14 +137,57 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    
 }
 .card{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 300px;
+    margin: 2rem;
+    width: 250px;
+    height: 250px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 24px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+}
+.card a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.card a:hover{
+     color: var(--hover);
+     
+}
+
+.card:hover{
+    background-color: var(--hover);
+    transform: scale(1.1);
+    transition: 0.5s;
+    font-size: 30px;
+}
+
+.parks{
+    background-image: url(img/parks-img.jpg);
+    background-size: cover;
+    
+}
+
+.cities{
+    background-image: url(img/cities-img.jpg);
+    background-size: cover;
+}
+
+.history{
+    background-image: url(img/history-img.jpg);
+    background-size: cover;
+}
+
+.culture{
+    background-image: url(img/culture-img.jpg);
+    background-size: cover;
 }
 footer{
     background-color: var(--secondary-color);
@@ -163,7 +206,6 @@ footer{
     height: 75px;
     width: 75px;
 }
-
 
 
 /**Contact Us Form Styling **/
