--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
     color: var(--hover);
 } 
 
-.hero-section{
+/**.hero-section{
   background-image: url(img/hero-img.jpg);
   background-size: cover;
   width: 100vw;
@@ -89,8 +89,28 @@ body {
   justify-content: center;
   font-size: 40px;
   color: #fff;
-} 
+} **/
 
+/**  Hero Section Styling  for requiements **/
+.hero-image {
+    background-image: url("img/hero-img.jpg");
+    width: 100vw;
+    height: 850px;
+    margin-top: -2rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 40px;
+  }
 
 .content-header{
     margin-top: 2rem;
@@ -112,11 +132,13 @@ body {
     justify-content: center;
 }
 .content-main{
+    float: left;
     max-width: 900px;
     margin-right: 2rem;
     color: var(--tertiary-color)
 }
 .content-aside{
+    float: right;
     margin-left: 1rem;
     background-color: var(--hover);
     max-width: 400px;
@@ -233,6 +255,28 @@ body {
     max-width: 600px;
 }
 
+.table-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.city-table{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+    color: var(--secondary-color);
+}
+
+td{
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+/** History Styling **/
 
 .history-hero-section{
     background-image: url(img/history-hero.jpg);
@@ -246,6 +290,15 @@ body {
     color: #fff;
 
 }
+
+/**Contact Us Form Styling **/
+
+.contact-us-form{
+    width: 600px;
+    background-color: var(--tertiary-color);
+    color: #fff;
+}
+
 
 /** Footer Styling **/
 footer{
@@ -266,11 +319,3 @@ footer{
     width: 75px;
 }
 
-
-/**Contact Us Form Styling **/
-
-.contact-us-form{
-    width: 600px;
-    background-color: var(--tertiary-color);
-    color: #fff;
-}
